# libCML

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  _config.yml  index.md  resources.qrc
android/: AddQtAndroidApk.cmake  qtdeploy.json.in
cmake/: FindAccelerateSparse.cmake  FindCXSparse.cmake  FindCeres.cmake  FindFLANN.cmake  FindG2O.cmake.bak  FindLibZip.cmake  FindSophus.cmake  FindSuiteSparse.cmake  FindTBB.cmake
evaluation/: __init__.py  __main__.py  autocopy.py  bruteforce.py  config.txt  database.py  dataset.py  dso.yaml  dso2000.yaml  dso800.yaml  evaluator.py  genetic.py  graphmaker.pyx  header.tex  make2dtable.py  modslam.good1.yaml  modslam.good2.yaml  modslam.yaml  modslam2.yaml  orb.yaml  orb1000.yaml  orb2000.yaml  parseconfig.py  plotall.py  slam.py  statson.py  table.py  utils.py
extra/: tinyxml2.doxiz.json  tinyxml2.doxiz.yaml
include/: sse2neon.h
include/cml/: config.h.in  types.h
include/cml/base/: AbstractFunction.h  Parameter.h  (+4 more)
include/qcustomplot/: qcustomplot.h
resources/: style.css
resources/shaders/: fscolor.glsl  fspath.glsl  fspc.glsl  fstexture.glsl  version.glsl  vs2d.glsl  vs3d.glsl  vspath.glsl  vspc.glsl
src/: CMakeLists.txt  sse2neon.h
src/argparse/: argparse.hpp
src/cml/: config.h.in  fastmath.cpp  fastmath.h  types.cpp  types.h
src/cml/base/: AbstractCaptureProcessor.h  AbstractFunction.h  AbstractInternalCalibration.h  AbstractPhotometricCalibration.h  AbstractSlam.cpp  AbstractSlam.h  Parameter.h  SlamThread.h  Statistic.cpp  Statistic.h
src/cml/capture/: AbstractCapture.h  CaptureImage.cpp  CaptureImage.h  Eth3DCapture.cpp  Eth3DCapture.h  EurocCapture.cpp  EurocCapture.h  KittyCapture.cpp  KittyCapture.h  QtWebcamCapture.cpp  QtWebcamCapture.h  RobotCarCapture.cpp  RobotCarCapture.h  StereopolisCapture.cpp  TUMCapture.cpp  TUMCapture.h  TartanairCapture.cpp  TartanairCapture.h  VideoCapture.cpp  VideoCapture.h  ZipCaptureHelper.h  ZipStereopolisCapture.h
src/cml/evaluation/: Alignment.cpp  Alignment.h  Evaluation.h
src/cml/features/: Features.cpp  Features.h
src/cml/features/bow/: Bow.h  BowVector.cpp  BowVector.h  DBoW2.h  FeatureVector.cpp  FeatureVector.h  QueryResults.cpp  QueryResults.h  Relocalization.cpp  Relocalization.h  ScoringObject.cpp  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h
src/cml/features/corner/: BRIEF.cpp  BRIEF.h  BRIEFPattern.cpp  FAST.cpp  FAST.h  ORB.cpp  ORB.h  ORBPattern.cpp  OpenCV.cpp  OpenCV.h  PixelSelector.cpp  PixelSelector.h
src/cml/features/cornerTracker/: AbstractCornerTracker.h  BoWTracker.cpp  BoWTracker.h  BruteforceTracker.h  CornerMatcher.cpp  CornerMatcher.h  DefaultParameters.h  LSHTracker.h  RadiusTracker.h  ReprojectionTracker.h  VFC.cpp  VFC.h
src/cml/gui/: CaptureSelector.cpp  MainSlamWidget.cpp  MainSlamWidget.h  MainWindow.cpp  SlamSelector.cpp
src/cml/gui/drawboard/: QtDrawBoard.cpp  QtDrawBoard.h  QtDrawBoardShaders.cpp  QtDrawBoardShaders.h
src/cml/gui/viewer/: DrawBoard.h  ReprojectionViewer.cpp  ReprojectionViewer.h  VarianceViewer.cpp  VarianceViewer.h
src/cml/gui/widgets/: CameraViewerWidget.cpp  CameraViewerWidget.h  FunctionListWidget.cpp  FunctionListWidget.h  FunctionWidget.cpp  FunctionWidget.h  GroupsWidget.cpp  GroupsWidget.h  LoggerWidget.cpp  LoggerWidget.h  ModelWidget.cpp  ModelWidget.h  ParameterCheckbox.cpp  ParameterCheckbox.h  ParameterFloatingSlider.cpp  ParameterFloatingSlider.h  ParameterIntegerSlider.cpp  ParameterIntegerSlider.h  Spoiler.cpp  Spoiler.h  StatisticWidget.cpp  StatisticWidget.h
src/cml/image/: AbstractROArray2D.h  Array2D.cpp  Array2D.h  Array2DProxy.h  Filter.h  LookupTable.h  MatrixPool.h  MatrixPyramid.h
src/cml/map/: Camera.cpp  Camera.h  Exposure.h  Frame.cpp  Frame.h  GroupsManager.h  Hasher.cpp  InternalCalibration.cpp  InternalCalibration.h  Map.cpp  Map.h  MapObject.cpp  MapObject.h  PrivateData.h
src/cml/maths/: Derivative.h  Rotation.cpp  Rotation.h  Utils.h
src/cml/nn/: Midas.cpp  Midas.h  MonoDepth.cpp  MonoDepth.h  Precomputed.cpp  Precomputed.h
src/cml/optimization/: EPnP.cpp  EPnP.h  IndirectPointOptimizer.cpp  IndirectPointOptimizer.h  Residual.h  Triangulation.cpp  Triangulation.h
src/cml/optimization/ceres/: CeresFunctions.h  IndirectBundleAdjustment.cpp  IndirectBundleAdjustment.h  IndirectCameraOptimizer.cpp  IndirectCameraOptimizer.h  PlaneInitializer.cpp  PlaneInitializer.h
src/cml/optimization/dso/: DSOBundleAdjustment.cpp  DSOBundleAdjustment.h  DSOContext.h  DSOFrame.h  DSOInitializer.cpp  DSOInitializer.h  DSOPoint.h  DSOResidual.h  DSOTracer.cpp  DSOTracer.h  DSOTracker.cpp  DSOTracker.h  DSOTypes.h  MatrixAccumulators.h
src/cml/optimization/g2o/: IndirectBundleAdjustment.cpp  IndirectBundleAdjustment.h  IndirectCameraOptimizer.cpp  IndirectCameraOptimizer.h  g2oconfig.h
src/cml/robust/: CameraChecker.cpp  CameraChecker.h  RobustFundamental8Points.cpp  RobustFundamental8Points.h  RobustHomography.cpp  RobustHomography.h  RobustPoseLoss.cpp  RobustPoseLoss.h  RobustRaulmurInitializer.cpp  RobustRaulmurInitializer.h
src/cml/robust/backend/: Ransac.h
src/cml/simd/: AlignedArray.h  M128.h
src/cml/slam/: modslam.cpp
src/cml/slam/calib/: Calib.cpp  Calib.h
src/cml/slam/modslam/: CMakeLists.txt  Hybrid.cpp  Hybrid.h  Make.cpp  Research.cpp
src/cml/slam/modslam/direct/: Mapping.cpp  Tracking.cpp
src/cml/slam/modslam/indirect/: Mapping.cpp  Tracking.cpp
src/cml/tests/: orbtest.cpp
src/cml/types/: NaiveMap.h  OS.cpp  OS.h  Optional.h
src/cml/utils/: Complexity.cpp  Complexity.h  DistanceMap.h  GarbageCollector.cpp  GarbageCollector.h  KDTree.cpp  KDTree.h  Logger.cpp  Logger.h  PoolAllocator.h  Timer.h  Watchpoint.cpp
src/fast/: fast.c  fast_10.c  fast_11.c  fast_12.c  fast_9.c  nonmax.c
src/lodepng/: lodepng.cpp  lodepng.h
src/parallel_hashmap/: btree.h  conanfile.py  meminfo.h  phmap.h  phmap_base.h  phmap_bits.h  phmap_config.h  phmap_dump.h  phmap_fwd_decl.h  phmap_utils.h
src/qcustomplot/: qcustomplot.cpp
utils/: common_words.txt
yaml-examples/: EnTT-example.yaml  drogon-example.yaml  flecs-example.yaml
(+98 files in other folders)
